/*
 * Copyright and related rights waived via CC0
 *
 * You should have received a copy of the CC0 legalcode along with this
 * work. If not, see <http://creativecommons.org/publicdomain/zero/1.0/>.
 */
plugins {
    id "org.graalvm.internal.tck"
    id "org.jetbrains.kotlin.jvm" version "2.3.20"
}

String libraryVersion = tck.testedLibraryVersion.get()

dependencies {
    testImplementation "com.github.ajalt.mordant:mordant-jvm-ffm-jvm:$libraryVersion"
    testImplementation "com.github.ajalt.mordant:mordant-core-jvm:$libraryVersion"
    testImplementation 'org.assertj:assertj-core:3.22.0'
}

kotlin {
    jvmToolchain(21)
}

compileTestKotlin {
    kotlinOptions.jvmTarget = "21"
}

tasks.withType(Test).configureEach {
    jvmArgs += [
        "--enable-native-access=ALL-UNNAMED"
    ]
}

graalvmNative {
    agent {
        defaultMode = "conditional"
        modes {
            conditional {
                userCodeFilterPath = "user-code-filter.json"
            }
        }
    }
    binaries {
        all {
            buildArgs.addAll([
                '--enable-native-access=ALL-UNNAMED'
            ])
        }
    }
}
